--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "convex": "^1.22.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.6.3",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "react": "^19.0.0",
@@ -32,6 +33,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
+    "react-leaflet": "^5.0.0",
     "sonner": "^2.0.3",
     "svix": "^1.63.1",
     "tailwind-merge": "^3.1.0",
