--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
   "dependencies": {
     "@clerk/nextjs": "^6.13.0",
     "@hookform/resolvers": "^5.0.1",
+    "@livekit/components-react": "^2.9.0",
+    "@livekit/components-styles": "^1.1.5",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
     "@turf/turf": "^7.2.0",
+    "add": "^2.0.6",
+    "avatar": "^0.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -27,6 +33,8 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.6.3",
     "leaflet": "^1.9.4",
+    "livekit-client": "^2.9.9",
+    "livekit-server-sdk": "^2.11.0",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "react": "^19.0.0",
@@ -35,6 +43,7 @@
     "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
     "react-leaflet": "^5.0.0",
+    "shadcn": "^2.4.0-canary.17",
     "sonner": "^2.0.3",
     "svix": "^1.63.1",
     "tailwind-merge": "^3.1.0",
