--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
     "react-leaflet": "^5.0.0",
+    "recharts": "^2.15.2",
     "shadcn": "^2.4.0-canary.17",
     "sonner": "^2.0.3",
     "svix": "^1.63.1",
